fixed overflow:

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,12 @@ body{
     padding:0;
     margin:0;
     background-color:#888;
-    overflow-x:hidden;
     position:relative;
+}
+
+body, html{
+    margin:0;
+    padding:0;
 }
 
 #play-area{
@@ -62,7 +66,6 @@ i{
 }
 
 #highscores.hidden{
-    right:-50%;
     width:0;
 }
 
